@@ -6,6 +6,10 @@ BUG: Ticket#505 - cultureInfo::getEnglishName does not return an arrary (Wei)
 BUG: Ticket#508 - CultureInfo class: PHP Notice because of missing static declaration (Wei)
 BUG: Ticket#558 - TRadionButtonList generates a empty onclick attribute (Qiang)
 BUG: Ticket#573 - NumberFormat Bug (Wei)
+ENH: Ticket#367 - Change default extension for XLIFF files (Wei, changed to support .xlf extension).
+ENH: Upgraded javascript library Prototype to version 1.5.0 (Wei)
+ENH: Upgraded javascript library Scriptaculous to version 1.7.0 (Wei)
+ENH: Upgraded TinyMCE editor to version 2.1 (Wei)
 
 Version 3.0.6 December 4, 2006
 ==============================
